--- a/src/main/resources/templates/client/create.html
+++ b/src/main/resources/templates/client/create.html
@@ -93,6 +93,32 @@
                                 </ul>
                             </div>
 
+                            <!-- Modal -->
+                            <div class="modal fade" id="error-modal" tabindex="-1" role="dialog"
+                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title text-danger" id="exampleModalLabel">
+                                                <i class="fas fa-exclamation-circle"></i>
+                                                <span id="error-modal-title" th:text="#{title.error.oops}"></span>
+                                            </h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <span id="error-modal-body"></span>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-primary" data-dismiss="modal">
+                                                <span th:text="#{btn.close}"></span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <!--General-info-->
                             <div id="general-info" class="card-body">
                                 <div class="user-info">
@@ -217,7 +243,8 @@
                                             <div class="form-group col-md-4">
                                                 <label for="txt-income-per-mouth"
                                                        th:text="#{label.income.per.month} + ':'"></label>
-                                                <input type="number" class="form-control numbers-to-validate" id="txt-income-per-mouth"
+                                                <input type="number" class="form-control numbers-to-validate"
+                                                       id="txt-income-per-mouth"
                                                        th:placeholder="#{placeholder.income.byn}"/>
                                             </div>
                                         </div>
