--- a/src/main/resources/templates/client/create.html
+++ b/src/main/resources/templates/client/create.html
@@ -255,7 +255,7 @@
                                         <div class="form-group col-md-8"></div>
                                         <div class="form-group col-md-4">
                                             <button class="btn btn-primary float-right"
-                                                    onclick="validateGeneralInfo(); saveGeneralInfo()">
+                                                    onclick="saveGeneralInfo()">
                                                 <span th:text="#{btn.next}"></span>
                                                 <i class="fas fa-arrow-right"></i>
                                             </button>
@@ -400,7 +400,7 @@
                                         <div class="form-group col-md-8"></div>
                                         <div class="form-group col-md-4">
                                             <button class="btn btn-primary float-right"
-                                                    onclick="validateContactInfo(); saveContactInfo()">
+                                                    onclick="saveContactInfo()">
                                                 <span th:text="#{btn.next}"></span>
                                                 <i class="fas fa-arrow-right"></i>
                                             </button>
@@ -627,7 +627,7 @@
                                         <div class="form-group col-md-8"></div>
                                         <div class="form-group col-md-4">
                                             <button class="btn btn-lg btn-success float-right"
-                                                    onclick="validatePersonalInfo(); savePersonalInfo(); saveClient()">
+                                                    onclick="savePersonalInfo(); saveClient()">
                                                 <i class="fas fa-save"></i>
                                                 <span th:text="#{btn.save}"></span>
                                             </button>
