--- a/src/main/resources/templates/client/show.html
+++ b/src/main/resources/templates/client/show.html
@@ -136,7 +136,8 @@
                                             <button type="button" class="btn btn-primary" data-dismiss="modal">
                                                 <span th:text="#{btn.cancel}"></span>
                                             </button>
-                                            <button type="button" class="btn btn-outline-danger">
+                                            <button type="button" class="btn btn-outline-danger"
+                                                    th:onclick="'deleteClient('+ ${client.id} +')'">
                                                 <span th:text="#{btn.delete}"></span>
                                             </button>
                                         </div>
