Gender selection fixed

--- a/src/main/resources/templates/client/create.html
+++ b/src/main/resources/templates/client/create.html
@@ -199,11 +199,11 @@
                                                 <br>
                                                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                                                     <label class="btn btn-outline-secondary btn-sm">
-                                                        <input type="radio" name="gender" value="true"
+                                                        <input type="radio" name="gender"
                                                                checked> <span th:text="#{passport.gender.male}"></span>
                                                     </label>
                                                     <label class="btn btn-outline-secondary btn-sm">
-                                                        <input type="radio" name="gender" value="false">
+                                                        <input type="radio" name="gender">
                                                         <span th:text="#{passport.gender.female}"></span>
                                                     </label>
                                                 </div>
