--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,6 +41,13 @@
                     </li>
                 </ul>
             </div>
+            <div class="logout">
+                <a th:href="#{link.github}" target="_blank">
+                    <i class="fab fa-github"></i>
+                    <span>GitHub</span>
+                </a>
+            </div>
+
         </header>
         <div class="container-fluid">
             <div class="row row-center">
