--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -42,6 +42,11 @@ section {
     font-weight: 600;
 }
 
+.bg-gradient {
+    background-color: #159957;
+    background-image: linear-gradient(120deg, #155799, #159957);
+}
+
 .bg-blue {
     background-image: url("../assets/blue-h.jpg");
     background-size: cover;
