--- a/src/main/resources/templates/client/edit.html
+++ b/src/main/resources/templates/client/edit.html
@@ -114,7 +114,7 @@
                             </div>
 
                             <!--General-info-->
-                            <div id="general-info" class="card-body">
+                            <div id="general-info" class="card-body card-info">
                                 <div class="user-info">
 
                                     <!--FIO-->
@@ -290,7 +290,7 @@
                             </div>
 
                             <!--Contact info-->
-                            <div id="contact-info" class="card-body" style="display: none">
+                            <div id="contact-info" class="card-body card-info" style="display: none">
                                 <div class="user-info">
 
                                     <!--Living address-->
@@ -443,7 +443,7 @@
                             </div>
 
                             <!--Personal-info-->
-                            <div id="personal-info" class="card-body" style="display: none">
+                            <div id="personal-info" class="card-body card-info" style="display: none">
                                 <div class="user-info">
 
                                     <!--Passport-->
