--- a/src/main/resources/templates/client/create.html
+++ b/src/main/resources/templates/client/create.html
@@ -120,7 +120,7 @@
                             </div>
 
                             <!--General-info-->
-                            <div id="general-info" class="card-body">
+                            <div id="general-info" class="card-body card-info">
                                 <div class="user-info">
 
                                     <!--FIO-->
@@ -265,7 +265,7 @@
                             </div>
 
                             <!--Contact info-->
-                            <div id="contact-info" class="card-body" style="display: none">
+                            <div id="contact-info" class="card-body card-info" style="display: none">
                                 <div class="user-info">
 
                                     <!--Living address-->
@@ -410,7 +410,7 @@
                             </div>
 
                             <!--Personal-info-->
-                            <div id="personal-info" class="card-body" style="display: none">
+                            <div id="personal-info" class="card-body card-info" style="display: none">
                                 <div class="user-info">
 
                                     <!--Passport-->
