--- a/src/main/resources/templates/client/show.html
+++ b/src/main/resources/templates/client/show.html
@@ -105,6 +105,14 @@
                                         </button>
                                     </li>
 
+                                    <!--Client accounts-->
+                                    <li class="nav-item">
+                                        <button id="btn-client-accounts" class="btn nav-link"
+                                                onclick="showClientAccounts()">
+                                            <span th:text="#{client.accounts}"></span>
+                                        </button>
+                                    </li>
+
                                     <!--Edit-->
                                     <li class="nav-item">
                                         <a class="btn nav-link" th:href="@{'/client/edit/' + ${client.id}}">
@@ -115,13 +123,13 @@
                                 </ul>
                             </div>
 
-                            <!-- Modal -->
+                            <!-- Modal delete client-->
                             <div class="modal fade" id="deleteClientModal" tabindex="-1" role="dialog"
-                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                 aria-labelledby="deleteClientModalLabel" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title text-danger" id="exampleModalLabel">
+                                            <h5 class="modal-title text-danger" id="deleteClientModalLabel">
                                                 <i class="fas fa-trash-alt"></i>
                                                 <span th:text="#{title.client.delete}"></span>
                                             </h5>
@@ -145,8 +153,53 @@
                                 </div>
                             </div>
 
+                            <!-- Modal create account-->
+                            <div class="modal fade" id="createAccountModal" tabindex="-1"
+                                 role="dialog"
+                                 aria-labelledby="deleteClientModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title text-success"
+                                                id="createAccountModalLabel">
+                                                <i class="fas fa-money-check-alt"></i>
+                                                <span th:text="#{title.account.create}"></span>
+                                            </h5>
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                    aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="form-row">
+                                                <div class="form-group col-md-12">
+                                                    <label for="select-currency"
+                                                           th:text="#{label.select.currency} + ':'"></label>
+                                                    <select id="select-currency" class="form-control">
+                                                        <th:block th:each="currency : ${currencies}">
+                                                            <option th:value="${currency.id}"
+                                                                    th:text="${currency.name}"></option>
+                                                        </th:block>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-primary"
+                                                    data-dismiss="modal">
+                                                <span th:text="#{btn.cancel}"></span>
+                                            </button>
+                                            <button type="button" class="btn btn-success"
+                                                    th:onclick="'saveAccount(' + ${client.id} + ')'">
+                                                <span th:text="#{btn.save}"></span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <!--General-info-->
-                            <div id="general-info" class="card-body">
+                            <div id="general-info" class="card-body card-info">
                                 <div class="user-info">
 
                                     <!--FIO-->
@@ -323,7 +376,7 @@
                             </div>
 
                             <!--Contact info-->
-                            <div id="contact-info" class="card-body" style="display: none">
+                            <div id="contact-info" class="card-body card-info" style="display: none">
                                 <div class="user-info">
 
                                     <!--Living address-->
@@ -339,7 +392,7 @@
 
                                             <!--Country-->
                                             <div class="form-group col-md-6">
-                                                <label for="select-living-address-country"
+                                                <label for="select-currency"
                                                        th:text="#{placeholder.input.country} + ':'"></label>
                                                 <select id="select-living-address-country" class="form-control"
                                                         disabled>
@@ -485,7 +538,7 @@
                             </div>
 
                             <!--Personal-info-->
-                            <div id="personal-info" class="card-body" style="display: none">
+                            <div id="personal-info" class="card-body card-info" style="display: none">
                                 <div class="user-info">
 
                                     <!--Passport-->
@@ -729,6 +782,84 @@
                                 </div>
                             </div>
 
+                            <!--Client accounts-->
+                            <div id="client-accounts" class="card-body card-info" style="display: none">
+                                <div class="user-info">
+
+                                    <!--Table-->
+                                    <table class="table table-borderless table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">
+                                                    <span class="action-icon" data-toggle="modal"
+                                                          data-target="#createAccountModal">
+                                                         <i class="fas fa-plus"></i>
+                                                    </span>
+                                                </th>
+                                                <th scope="col">#</th>
+                                                <th scope="col" th:text="#{account.date.of.currency}"></th>
+                                                <th scope="col" th:text="#{account.date.of.value}"></th>
+                                                <th scope="col" th:text="#{account.date.of.issue}"></th>
+                                                <th scope="col" th:text="#{account.date.of.expire}"></th>
+                                                <th scope="col" th:text="#{account.worker.id}"></th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <th:block th:each="account : ${accounts}">
+                                                <tr>
+                                                    <td>
+                                                        <span class="action-icon" data-toggle="modal"
+                                                              data-target="#deleteAccountModal">
+                                                            <i class="fas fa-trash-alt"></i>
+                                                        </span>
+                                                    </td>
+                                                    <td th:text="${account.id}"></td>
+                                                    <td th:text="${account.currency.name}"></td>
+                                                    <td th:text="${account.value}"></td>
+                                                    <td th:text="${#dates.format(account.dateOfIssue,'dd.MM.yyyy')}"></td>
+                                                    <td th:text="${#dates.format(account.dateOfExpire,'dd.MM.yyyy')}"></td>
+                                                    <td th:text="${account.worker.id}"></td>
+                                                </tr>
+
+                                                <!-- Modal delete account-->
+                                                <div class="modal fade" id="deleteAccountModal" tabindex="-1"
+                                                     role="dialog"
+                                                     aria-labelledby="deleteClientModalLabel" aria-hidden="true">
+                                                    <div class="modal-dialog" role="document">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h5 class="modal-title text-danger"
+                                                                    id="deleteAccountModalLabel">
+                                                                    <i class="fas fa-trash-alt"></i>
+                                                                    <span th:text="#{title.account.delete}"></span>
+                                                                </h5>
+                                                                <button type="button" class="close" data-dismiss="modal"
+                                                                        aria-label="Close">
+                                                                    <span aria-hidden="true">&times;</span>
+                                                                </button>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <span th:text="#{txt.warning.delete.account}"></span>
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <button type="button" class="btn btn-primary"
+                                                                        data-dismiss="modal">
+                                                                    <span th:text="#{btn.cancel}"></span>
+                                                                </button>
+                                                                <button type="button" class="btn btn-outline-danger"
+                                                                        th:onclick="'deleteAccount(' + ${account.id} + ')'">
+                                                                    <span th:text="#{btn.delete}"></span>
+                                                                </button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </th:block>
+                                        </tbody>
+                                    </table>
+
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
