--- a/src/main/resources/templates/client/show.html
+++ b/src/main/resources/templates/client/show.html
@@ -67,7 +67,7 @@
                 <div class="col-12">
                     <div class="rounded-container smooth-shadow">
                         <div class="title-container">
-                            <i class="avatar fas fa-user-astronaut"></i>
+                            <i class="fas fa-user avatar"></i>
                             <h2>
                                 <span th:text="
                                     ${client.passport.lastName} + ' ' +
