--- a/src/main/resources/templates/client/create.html
+++ b/src/main/resources/templates/client/create.html
@@ -93,13 +93,13 @@
                                 </ul>
                             </div>
 
-                            <!-- Modal -->
+                            <!--Error Modal -->
                             <div class="modal fade" id="error-modal" tabindex="-1" role="dialog"
-                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                 aria-labelledby="error-modal-label" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title text-danger" id="exampleModalLabel">
+                                            <h5 class="modal-title text-danger" id="error-modal-label">
                                                 <i class="fas fa-exclamation-circle"></i>
                                                 <span id="error-modal-title" th:text="#{title.error.oops}"></span>
                                             </h5>
