--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,11 +65,15 @@
                                     <p class="mb-0" th:text="#{txt.blockquote}"></p>
                                     <footer class="blockquote-footer" th:text="#{txt.blockquote.author}"></footer>
                                 </blockquote>
-                                <div>
-                                    <a th:href="@{/worker/logIn}" role="button"
-                                       class="btn-custom btn btn-success">
-                                        <span th:text="#{btn.login}"></span>
-                                    </a>
+                                <!--Next-->
+                                <div class="form-row">
+                                    <div class="form-group col-md-8"></div>
+                                    <div class="form-group col-md-4">
+                                        <a th:href="@{/worker/logIn}" role="button"
+                                           class="btn-custom btn btn-success float-right">
+                                            <span th:text="#{btn.login}"></span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
