Add scroll top in show/create client views

--- a/src/main/resources/templates/client/show.html
+++ b/src/main/resources/templates/client/show.html
@@ -89,7 +89,7 @@
 
                                     <!--General-info-->
                                     <li class="nav-item">
-                                        <button id="btn-general-info" class="btn nav-link active"
+                                        <button id="btn-general-info" class="btn nav-link active scroll-top"
                                                 onclick="showGeneralInfo()">
                                             <span th:text="#{client.general.information}"></span>
                                         </button>
@@ -97,7 +97,7 @@
 
                                     <!--Contacts-->
                                     <li class="nav-item">
-                                        <button id="btn-contacts" class="btn nav-link"
+                                        <button id="btn-contacts" class="btn nav-link scroll-top"
                                                 onclick="showContactInfo()">
                                             <span th:text="#{client.contact.information}"></span>
                                         </button>
@@ -105,7 +105,7 @@
 
                                     <!--Personal-info-->
                                     <li class="nav-item">
-                                        <button id="btn-personal-info" class="btn nav-link"
+                                        <button id="btn-personal-info" class="btn nav-link scroll-top"
                                                 onclick="showPersonalInfo()">
                                             <span th:text="#{client.private.information}"></span>
                                         </button>
@@ -113,7 +113,7 @@
 
                                     <!--Client accounts-->
                                     <li class="nav-item">
-                                        <button id="btn-client-accounts" class="btn nav-link"
+                                        <button id="btn-client-accounts" class="btn nav-link scroll-top"
                                                 onclick="showClientAccounts()">
                                             <span th:text="#{client.accounts}"></span>
                                         </button>
@@ -397,7 +397,7 @@
                                     <div class="form-row">
                                         <div class="form-group col-md-8"></div>
                                         <div class="form-group col-md-4">
-                                            <button class="btn btn-primary float-right"
+                                            <button class="btn btn-primary float-right scroll-top"
                                                     onclick="showContactInfo()">
                                                 <span th:text="#{btn.next}"></span>
                                                 <i class="fas fa-arrow-right"></i>
@@ -559,7 +559,7 @@
                                     <div class="form-row">
                                         <div class="form-group col-md-8"></div>
                                         <div class="form-group col-md-4">
-                                            <button class="btn btn-primary float-right"
+                                            <button class="btn btn-primary float-right scroll-top"
                                                     onclick="showPersonalInfo()">
                                                 <span th:text="#{btn.next}"></span>
                                                 <i class="fas fa-arrow-right"></i>
