--- a/src/main/resources/templates/client/create.html
+++ b/src/main/resources/templates/client/create.html
@@ -254,7 +254,7 @@
                                     <div class="form-row">
                                         <div class="form-group col-md-8"></div>
                                         <div class="form-group col-md-4">
-                                            <button class="btn btn-primary float-right"
+                                            <button class="btn btn-primary float-right scroll-top"
                                                     onclick="saveGeneralInfo()">
                                                 <span th:text="#{btn.next}"></span>
                                                 <i class="fas fa-arrow-right"></i>
@@ -399,7 +399,7 @@
                                     <div class="form-row">
                                         <div class="form-group col-md-8"></div>
                                         <div class="form-group col-md-4">
-                                            <button class="btn btn-primary float-right"
+                                            <button class="btn btn-primary float-right scroll-top"
                                                     onclick="saveContactInfo()">
                                                 <span th:text="#{btn.next}"></span>
                                                 <i class="fas fa-arrow-right"></i>
@@ -626,7 +626,7 @@
                                     <div class="form-row">
                                         <div class="form-group col-md-8"></div>
                                         <div class="form-group col-md-4">
-                                            <button class="btn btn-lg btn-success float-right"
+                                            <button class="btn btn-lg btn-success float-right scroll-top"
                                                     onclick="savePersonalInfo(); saveClient()">
                                                 <i class="fas fa-save"></i>
                                                 <span th:text="#{btn.save}"></span>
